finish im-connector layer horizontal scalling and dynamic connection migration