@@ -1,19 +1,20 @@
 package org.cy.micoservice.blog.im.gateway.service.impl;
 
 import lombok.extern.slf4j.Slf4j;
-import org.cy.micoservice.blog.im.facade.router.connector.contstants.ImMonitorCacheConstant;
-import org.cy.micoservice.blog.im.gateway.dto.ImConnectorMonitorInfo;
+import org.cy.micoservice.blog.im.facade.connector.contstants.ImMonitorCacheConstant;
+import org.cy.micoservice.blog.im.gateway.dto.ImConnectorMonitor;
 import org.cy.micoservice.blog.im.gateway.service.ImConnectorMonitorService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * @Author: Lil-K
  * @Date: 2025/12/19
- * @Description: 存储下游存活连接节点信息
+ * @Description: 获取 IM 连接层配置监控信息
  */
 @Slf4j
 @Service
@@ -29,10 +30,13 @@ public class ImConnectorMonitorServiceImpl implements ImConnectorMonitorService 
     this.connectionNodeAddress = nodeAddressSet;
   }
 
+  /**
+   * 获取下游所有节点的监控配置信息
+   * @return
+   */
   @Override
-  public List<ImConnectorMonitorInfo> getAll() {
-    List<ImConnectorMonitorInfo> imConnectorMonitorInfoList = new ArrayList<>();
-    return connectionNodeAddress.stream()
+  public List<ImConnectorMonitor> getAll() {
+    return this.connectionNodeAddress.stream()
       .map(nodeAddress -> nodeAddress.split(":"))
       .filter(addressArr -> addressArr.length == 2)
       .map(addressArr -> {
@@ -43,19 +47,20 @@ public class ImConnectorMonitorServiceImpl implements ImConnectorMonitorService 
         String cacheKey = String.format(ImMonitorCacheConstant.IM_CONNECTOR_MONITOR_KEY, addressArr[0], addressArr[1]);
         Object connectionObj = stringRedisTemplate.opsForHash().get(cacheKey, ImMonitorCacheConstant.IM_CONNECTOR_CONNECTION_KEY);
         log.info("cacheKey: {}, connectionsObj: {}", cacheKey, connectionObj);
-        ImConnectorMonitorInfo imConnectorMonitorInfo = ImConnectorMonitorInfo.builder()
+        ImConnectorMonitor imConnectorMonitor = ImConnectorMonitor.builder()
           .ip(addressArr[0])
           .port(Integer.parseInt(addressArr[1]))
           .build();
 
         if (connectionObj == null) {
           // 机器初始化, 没有连接的情况下, 所以无缓存
-          imConnectorMonitorInfo.setConnections(0);
+          imConnectorMonitor.setConnections(0);
         } else {
-          imConnectorMonitorInfo.setConnections(Integer.parseInt(String.valueOf(connectionObj)));
+          imConnectorMonitor.setConnections(Integer.parseInt(String.valueOf(connectionObj)));
+          // imConnectorMonitor.setConnections((int)connectionObj);
         }
-        return imConnectorMonitorInfo;
+        return imConnectorMonitor;
       })
-      .toList();
+      .collect(Collectors.toList());
   }
 }
